// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioBooleanField render() renders with form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <div
      className="control-group radio-boolean"
    >
      <React.Fragment>
        <div
          className="radio"
          key="yes"
        >
          <label
            style={
              Object {
                "fontWeight": "normal",
              }
            }
          >
            <input
              checked={true}
              disabled={false}
              name="fieldName"
              onChange={[Function]}
              type="radio"
              value="true"
            />
             
            Yes
          </label>
        </div>
        <div
          className="radio"
          key="no"
        >
          <label
            style={
              Object {
                "fontWeight": "normal",
              }
            }
          >
            <input
              checked={false}
              disabled={false}
              name="fieldName"
              onChange={[Function]}
              type="radio"
              value="false"
            />
             
            No
          </label>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;

exports[`RadioBooleanField render() renders without form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <div
      className="control-group radio-boolean"
    >
      <React.Fragment>
        <div
          className="radio"
          key="yes"
        >
          <label
            style={
              Object {
                "fontWeight": "normal",
              }
            }
          >
            <input
              checked={false}
              disabled={false}
              name="fieldName"
              onChange={[Function]}
              type="radio"
              value="true"
            />
             
            Yes
          </label>
        </div>
        <div
          className="radio"
          key="no"
        >
          <label
            style={
              Object {
                "fontWeight": "normal",
              }
            }
          >
            <input
              checked={false}
              disabled={false}
              name="fieldName"
              onChange={[Function]}
              type="radio"
              value="false"
            />
             
            No
          </label>
        </div>
      </React.Fragment>
    </div>
  </div>
</div>
`;
